--- a/ultralytics/cfg/models/11/yolo11-transformer.yaml
+++ b/ultralytics/cfg/models/11/yolo11-transformer.yaml
@@ -23,10 +23,10 @@ backbone:
   - [-1, 2, C3k2, [512, False, 0.25]]
   - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
   - [-1, 2, C3k2, [512, True]]
-  - [-1, 1, TransformerBlock, [512, 1024, 8, 1]]   # Replace CBAM at mid-level
+  - [-1, 1, TransformerBlock, [512, 512, 8, 1]]   # Keep output at 512
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 2, C3k2, [1024, True]]
-  - [-1, 1, TransformerBlock, [1024, 1024, 8, 1]] # Replace CBAM before detection
+  - [-1, 1, TransformerBlock, [1024, 1024, 8, 1]] # Keep output at 1024
   - [-1, 1, SPPF, [1024, 5]]    # 9
   - [-1, 2, C2PSA, [1024]]
 
