--- a/ultralytics/cfg/models/11/yolo11-cbam-head.yaml
+++ b/ultralytics/cfg/models/11/yolo11-cbam-head.yaml
@@ -41,12 +41,12 @@ head:
   - [-1, 2, C3k2, [256, False]] # 16 (P3/8-small)
   - [-1, 1, CBAM, [256]] 
 
-  - [-1, 1, Conv, [256, 3, 2, 1]]
+  - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 13], 1, Concat, [1]] # cat head P4
   - [-1, 2, C3k2, [512, False]] # 19 (P4/16-medium)
   - [-1, 1, CBAM, [512]]
 
-  - [-1, 1, Conv, [512, 3, 2, 1]]
+  - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 10], 1, Concat, [1]] # cat head P5
   - [-1, 2, C3k2, [1024, True]] # 22 (P5/32-large)
   - [-1, 1, CBAM, [1024]]
