--- a/ultralytics/cfg/models/11/yolo11-eca-head.yaml
+++ b/ultralytics/cfg/models/11/yolo11-eca-head.yaml
@@ -30,12 +30,12 @@ backbone:
 
 # YOLO11n head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
+  - [-1, 1, nn.Upsample, [None, 2, "nearest", True]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
   - [-1, 2, C3k2, [512, False]] # 13
   - [-1, 1, ECAAttention, [512]]
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
+  - [-1, 1, nn.Upsample, [None, 2, "nearest", True]]
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3
   - [-1, 2, C3k2, [256, False]] # 16 (P3/8-small)
   - [-1, 1, ECAAttention, [256]]
