--- a/ultralytics/cfg/models/11/yolo11-cbam-optimized.yaml
+++ b/ultralytics/cfg/models/11/yolo11-cbam-optimized.yaml
@@ -26,7 +26,7 @@ backbone:
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
   - [-1, 2, C3k2, [1024, True]] #8
   - [-1, 1, SPPF, [1024, 5]]    # 9
-  - [-1, 1, CBAM, []] #10 
+  - [-1, 1, CBAM, [1024]] #10 
   - [-1, 2, C2PSA, [1024]] #11
 
 # YOLO11n head
@@ -38,7 +38,7 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #15
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3 #16
   - [-1, 2, C3k2, [256, False]] # 17 (P3/8-small)
-  - [-1, 1, CBAM, []] #18 (Keep - P3 Attention)
+  - [-1, 1, CBAM, [256]] #18 (Keep - P3 Attention)
 
   - [-1, 1, Conv, [256, 3, 2]] #19
   - [[-1, 15], 1, Concat, [1]] # cat head P4 (20)
@@ -47,6 +47,6 @@ head:
   - [-1, 1, Conv, [512, 3, 2]] #22
   - [[-1, 10], 1, Concat, [1]] # cat head P5 (23)
   - [-1, 2, C3k2, [1024, True]] # 24 (P5/32-large)
-  - [-1, 1, CBAM, []] #25 (NEW - P5 Attention)
+  - [-1, 1, CBAM, [1024]] #25 (NEW - P5 Attention)
 
   - [[18, 21, 25], 1, Detect, [nc]] # Detect(P3, P4, P5)
