--- a/ultralytics/cfg/models/11/yolo11-cbam-optimized.yaml
+++ b/ultralytics/cfg/models/11/yolo11-cbam-optimized.yaml
@@ -40,7 +40,7 @@ head:
   - [-1, 2, C3k2, [256, False]] # 17 (P3/8-small)
 
   - [-1, 1, Conv, [256, 3, 2]] #18
-  - [[-1, 15], 1, Concat, [1]] # cat head P4 (19)
+  - [[-1, 13], 1, Concat, [1]] # cat head P4
   - [-1, 2, C3k2, [512, False]] # 20 (P4/16-medium)
 
   - [-1, 1, Conv, [512, 3, 2]] #21
