--- a/ultralytics/cfg/models/11/yolo11-cbam-head.yaml
+++ b/ultralytics/cfg/models/11/yolo11-cbam-head.yaml
@@ -33,21 +33,20 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   - [[-1, 6], 1, Concat, [1]] # cat backbone P4
   - [-1, 2, C3k2, [512, False]] # 13
-  - [-1, 1, CBAM, []] #14 
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #15
-  - [[-1, 4], 1, Concat, [1]] # cat backbone P3 #16
-  - [-1, 2, C3k2, [256, False]] # 17 (P3/8-small)
-  - [-1, 1, CBAM, []] #18
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #14
+  - [[-1, 4], 1, Concat, [1]] # cat backbone P3 #15
+  - [-1, 2, C3k2, [256, True]] # 16 (P3/8-small)
+  - [-1, 1, CBAM, []] #17
 
-  - [-1, 1, Conv, [256, 3, 2]] #19
-  - [[-1, 13], 1, Concat, [1]] # cat head P4 (20)
-  - [-1, 2, C3k2, [512, False]] # 21 (P4/16-medium)
-  - [-1, 1, CBAM, []] #22
+  - [-1, 1, Conv, [256, 3, 2]] #18
+  - [[-1, 13], 1, Concat, [1]] # cat head P4 (19)
+  - [-1, 2, C3k2, [512, True]] # 20 (P4/16-medium)
+  - [-1, 1, CBAM, []] #21
 
-  - [-1, 1, Conv, [512, 3, 2]] #23
-  - [[-1, 10], 1, Concat, [1]] # cat head P5 (24)
-  - [-1, 2, C3k2, [1024, True]] # 25 (P5/32-large)
-  - [-1, 1, CBAM, []] #26
+  - [-1, 1, Conv, [512, 3, 2]] #22
+  - [[-1, 10], 1, Concat, [1]] # cat head P5 (23)
+  - [-1, 2, C3k2, [1024, True]] # 24 (P5/32-large)
+  - [-1, 1, CBAM, []] #25
 
-  - [[18, 22, 26], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[17, 21, 25], 1, Detect, [nc]] # Detect(P3, P4, P5)
