--- a/ultralytics/cfg/models/11/yolo11-cbam-backbone.yaml
+++ b/ultralytics/cfg/models/11/yolo11-cbam-backbone.yaml
@@ -22,13 +22,13 @@ backbone:
   - [-1, 2, C3k2, [256, False, 0.25]] #2
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
   - [-1, 2, C3k2, [512, False, 0.25]] #4
-  - [-1, 1, CBAM, []] #5
+  - [-1, 1, CBAM, [512]] #5
   - [-1, 1, Conv, [512, 3, 2]] # 6-P4/16
   - [-1, 2, C3k2, [512, True]] #7
-  - [-1, 1, CBAM, []] #8
+  - [-1, 1, CBAM, [512]] #8
   - [-1, 1, Conv, [1024, 3, 2]] # 9-P5/32
   - [-1, 2, C3k2, [1024, True]] #10
-  - [-1, 1, CBAM, []] #11
+  - [-1, 1, CBAM, [1024]] #11
   - [-1, 1, SPPF, [1024, 5]] # 12
   - [-1, 2, C2PSA, [1024]] # 13
 
