--- a/ultralytics/cfg/models/11/yolo11-final-gam.yaml
+++ b/ultralytics/cfg/models/11/yolo11-final-gam.yaml
@@ -14,7 +14,7 @@ scales: # model compound scaling constants, i.e. 'model=yolo11n.yaml' will call 
   l: [1.00, 1.00, 512] # summary: 631 layers, 25372160 parameters, 25372144 gradients, 87.6 GFLOPs
   x: [1.00, 1.50, 512] # summary: 631 layers, 56966176 parameters, 56966160 gradients, 196.0 GFLOPs
 
-# YOLO11n backbone (Optimized CBAM Placement)
+# YOLO11n backbone (Optimized GAM Placement)
 backbone:
   - [-1, 1, Conv, [64, 3, 2]]   # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
@@ -37,16 +37,16 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #14
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3 #15
   - [-1, 2, C3k2, [256, True]] # 16 (P3/8-small)
-  - [-1, 1, GAM, []] #17
+  - [-1, 1, GAM, [256,256]] #17
 
   - [-1, 1, Conv, [256, 3, 2]] #18
   - [[-1, 13], 1, Concat, [1]] # cat head P4 (19)
   - [-1, 2, C3k2, [512, True]] # 20 (P4/16-medium)
-  - [-1, 1, GAM, []] #21
+  - [-1, 1, GAM, [512,512]] #21
 
   - [-1, 1, Conv, [512, 3, 2]] #22
   - [[-1, 10], 1, Concat, [1]] # cat head P5 (23)
   - [-1, 2, C3k2, [1024, True]] # 24 (P5/32-large)
-  - [-1, 1, GAM, []] #25
+  - [-1, 1, GAM, [1024,1024]] #25
 
   - [[17, 21, 25], 1, Detect, [nc]] # Detect(P3, P4, P5)
