--- a/ultralytics/cfg/models/11/yolo11-final-eca.yaml
+++ b/ultralytics/cfg/models/11/yolo11-final-eca.yaml
@@ -37,16 +37,16 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #14
   - [[-1, 4], 1, Concat, [1]] # cat backbone P3 #15
   - [-1, 2, C3k2, [256, True]] # 16 (P3/8-small)
-  - [-1, 1, GAM, [256,256]] #17
+  - [-1, 1, ECAAttention, []] #17
 
   - [-1, 1, Conv, [256, 3, 2]] #18
   - [[-1, 13], 1, Concat, [1]] # cat head P4 (19)
   - [-1, 2, C3k2, [512, True]] # 20 (P4/16-medium)
-  - [-1, 1, GAM, [512,512]] #21
+  - [-1, 1, ECAAttention, []] #21
 
   - [-1, 1, Conv, [512, 3, 2]] #22
   - [[-1, 10], 1, Concat, [1]] # cat head P5 (23)
   - [-1, 2, C3k2, [1024, True]] # 24 (P5/32-large)
-  - [-1, 1, GAM, [1024,1024]] #25
+  - [-1, 1, ECAAttention, []] #25
 
   - [[17, 21, 25], 1, Detect, [nc]] # Detect(P3, P4, P5)
